--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
                     <div class="buttons">
-                        <button class="btn">Download Resume</button>
+                        <button class="btn" onclick="window.location.href='https://drive.google.com/uc?export=download&id=10zyoqA8huKyDgq7-0uPCiSZXfX7VEcYs'">Download Resume</button>
                         <button class="btn">Visit Github</button>
                     </div>
 
